--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Nanum+Gothic:wght@400;700;800&display=swap');
+
 html, body{
     margin: 0;
     padding: 0;
+    font-family: 'Nanum Gothic', sans-serif;
 }
-img{
-    width: 100%;
-    height: auto;
 
-}
 *{
     box-sizing: border-box;
 }
@@ -17,4 +16,49 @@ body{
 h1, h2, h3, h4{
     margin-top: 0;
     font-weight: normal;
+}
+.nav-trigger{
+   
+    float: right;
+    
+    margin-right: 10%;
+}
+header{
+    background: linear-gradient(to right,#c99a4f,#f3de79,#f6f2c1,#e1c168);
+    padding: 5px;
+    display: flex;
+}
+#sign-in, #sign-up{
+    text-decoration: none;
+    color: rgb(22, 3, 39);
+    font-weight: bolder;
+    padding: 5px;
+   
+    
+}
+#sign-in{
+    margin-left: auto;
+}
+nav ul{
+    display: none;
+    justify-content: space-around;
+    text-decoration: none;
+}
+
+li{
+    list-style: none;
+    
+}
+h1{
+    font-family: 'Alex Brush', cursive;
+    color:rgb(202, 202, 202);
+    font-size: 2.5em;
+    text-align: center;
+
+   
+}
+p{
+    margin: 5%;
+    border: #e1c168 solid 1.5px;
+    padding: 5%;
 }
