--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ h1, h2, h3, h4{
 .nav-trigger{
    
     float: right;
-    
     margin-right: 10%;
 }
 header{
@@ -33,6 +32,7 @@ header{
     color: rgb(22, 3, 39);
     font-weight: bolder;
     padding: 5px;
+    font-size: smaller;
    
     
 }
@@ -61,4 +61,35 @@ p{
     margin: 5%;
     border: #e1c168 solid 1.5px;
     padding: 5%;
+    text-align: center;
+}
+.button-container{
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    
+    }
+    .button-container button{
+        background-image: linear-gradient(to right,#c99a4f,#f3de79,#f6f2c1,#e1c168);
+        text-transform: uppercase;
+        
+   font-weight: bolder;
+   letter-spacing: 0.05em;
+    color:  #1d071b;
+    border-radius: 7px;
+    border-bottom: 2px solid gray;
+    border-right: 2px solid gray;
+    
+    margin-bottom: 20px;
+
+
+    }
+    a{
+        text-decoration: none;
+    }
+h2{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1em;
+    margin-top: 2em;
 }
