--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
   background-color: rgb(22, 3, 39);
   color: wheat;
 }
+.wrapper-sign-form {
+  color: wheat;
+}
 body {
   background-color: #160327;
   background-image: url("data:image/svg+xml,%3Csvg width='80' height='88' viewBox='0 0 80 88' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M22 21.91V26h-2c-9.94 0-18 8.06-18 18 0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73 3.212-6.99 9.983-12.008 18-12.73V62h2c9.94 0 18-8.06 18-18 0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73-3.212 6.99-9.983 12.008-18 12.73zM54 58v4.696c-5.574 1.316-10.455 4.428-14 8.69-3.545-4.262-8.426-7.374-14-8.69V58h-5.993C12.27 58 6 51.734 6 44c0-7.732 6.275-14 14.007-14H26v-4.696c5.574-1.316 10.455-4.428 14-8.69 3.545 4.262 8.426 7.374 14 8.69V30h5.993C67.73 30 74 36.266 74 44c0 7.732-6.275 14-14.007 14H54zM42 88c0-9.94 8.06-18 18-18h2v-4.09c8.016-.722 14.787-5.738 18-12.73v7.434c-3.545 4.262-8.426 7.374-14 8.69V74h-5.993C52.275 74 46 80.268 46 88h-4zm-4 0c0-9.943-8.058-18-18-18h-2v-4.09c-8.012-.722-14.785-5.738-18-12.73v7.434c3.545 4.262 8.426 7.374 14 8.69V74h5.993C27.73 74 34 80.266 34 88h4zm4-88c0 9.943 8.058 18 18 18h2v4.09c8.012.722 14.785 5.738 18 12.73v-7.434c-3.545-4.262-8.426-7.374-14-8.69V14h-5.993C52.27 14 46 7.734 46 0h-4zM0 34.82c3.213-6.992 9.984-12.008 18-12.73V18h2c9.94 0 18-8.06 18-18h-4c0 7.732-6.275 14-14.007 14H14v4.696c-5.574 1.316-10.455 4.428-14 8.69v7.433z' fill='%23f3ec72' fill-opacity='0.17' fill-rule='evenodd'/%3E%3C/svg%3E");
@@ -56,14 +59,16 @@ nav {
   display: none;
   float: right;
   text-decoration: none;
-  position: relative;
+  position: absolute;
+  right: 0;
+  z-index: 5;
 }
 nav ul {
   position: absolute;
   top: 15px;
   right: 0;
-  width: 200px; /* or whatever */
-  background: rgba(245, 228, 240, 0.829); /* or whatever */
+  width: 200px;
+  background: rgb(245, 228, 240);
 }
 nav ul li {
   list-style: none;
@@ -210,7 +215,13 @@ css for Argan/Olive oil page
 .h1-page {
   margin-top: 1em;
 }
-
+.argan-youtube {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 10%;
+  width: 20%;
+  height: 20%;
+}
 /*======================================================================
 css for Contact us page
 ========================================================================*/
@@ -306,13 +317,11 @@ css for Sign In/Sign Up page
 
 .signin,
 .signup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
   background-color: rgb(22, 3, 39);
   border: 2px solid rgb(92, 60, 12);
-  transform: translate(-50%, -50%);
+  width: 95%;
   max-width: 500px;
+  margin: 20px auto;
   border-radius: 10px;
   padding: 0 50px;
 }
@@ -323,7 +332,7 @@ css for Sign In/Sign Up page
 }
 .signin form,
 .signup form {
-  padding: 0 40px;
+  padding: 0 10px;
 }
 form .txt-field {
   position: relative;
@@ -492,8 +501,11 @@ css for shop
   align-self: center;
 }
 
+/*===========================================================================================================================================================================================================================@media========================================================================================================================================================================================================*/
+
 @media (min-width: 740px) {
-  .wrapper {
+  .wrapper,
+  .wrapper-sign-form {
     width: 80%;
     max-width: 860px;
     margin: 0px auto;
@@ -524,8 +536,14 @@ css for shop
     display: flex;
     justify-content: space-around;
     padding-left: 0;
-    flex-grow: 1;
+    padding: 15px;
+    /*flex-grow: 1;*/
     position: static;
+  }
+  nav ul li {
+    flex: 1;
+    text-align: center;
+    padding: 0;
   }
   nav ul li a {
     transition: all 500ms ease-out;
@@ -539,6 +557,9 @@ css for shop
   #sign-in:hover,
   #sign-up:hover {
     color: rgb(133, 59, 59);
+  }
+  .sign-links {
+    display: flex;
   }
   main {
     max-width: 85%;
@@ -601,6 +622,9 @@ css for Argan/Olive oil page @media
     display: flex;
     justify-content: center;
     align-content: center;
+  }
+  .argan-youtube {
+    margin: 10%;
   }
 
   /*======================================================================
